sort.basic.shell.AlgShellSort.scala.error
Erreur de compilation :
AlgShellSort:16: error: ':' expected but ')' found.
def insertion (ecart) {
                    ^AlgShellSort:31: error: identifier expected but '}' found.
}
^